# crypto-payment-gateway

./: .env.example  .gitignore  DOMAIN_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  rpc  rpc_benchmark_result.env
.ralph/: deploy-live-canary-plan.md  dirty-state-commit-plan.md  migration-review-manifest.md  oklink-primary-migration.md  per-check-address-migration.md
alembic/: env.py
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/endpoints/: checks.py
backend/app/core/: config.py  constants.py
backend/app/db/: session.py
backend/app/services/: blockchain.py  monitor.py
config/: chains.toml  chains.toml.backup
data/: arbitron_payment.db
docs/: INTEGRATION_GUIDE.md
frontend/: index.html  nginx.conf  package.json
scripts/: backfill_deposits.py  benchmark_rpcs.py  check_balances.py  create_wallet_tables.py  full_system_check.py  legacy_backfill.py  legacy_sweep_drain.py  migrate_data.py  migrate_sqlite_to_postgres.py  sweep_all.py  sweep_all_balances.py  test_deposits.py  test_or_topics.py  test_persistent_deposits.py  test_rpc_compatibility.py
src/: __init__.py  main.py
static/: admin.html  merchant.html  payment.html
tests/: check_funder_balances.py  conftest.py  test_address_lease_service.py  test_e2e_chains.py  test_evm_log_poller_oklink.py  test_late_payment_policy.py  test_legacy_maintenance.py  test_modules.py  test_non_evm.py  test_oklink_client.py  test_parallel.py  (+4 more)
(+84 files in other folders)
