[tool.poetry]
name = "arbitron-payment-backend"
version = "0.1.0"
description = "Crypto payment service backend"
authors = ["Arbitron Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
web3 = "^6.15.0"
eth-account = "^0.11.0"
websockets = "^12.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
